--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                         </div>
                     </div>
                     <div class="flashcard-back">
-                        <div style="font-size: 3rem; margin-bottom: 20px;">...</div>
+                        <div style="font-size: 3rem; margin-bottom: 20px;">👍</div>
                         <div class="answer" id="answer" style="font-size: 1.4rem; line-height: 1.6;">
                             Cevap buraya gelecek
                         </div>
